syntax = "proto3";

option csharp_namespace = "SEServer.Auth.Protos";

package authentication;

service Authentication {
  rpc SignInAsync (SignInRequest) returns (SignInResponse);
  rpc RegisterAsync (RegisterRequest) returns (RegisterResponse);
}

message SignInRequest{
	string UserName = 1;
	string Password = 2;
}

message SignInResponse{
	string AccessToken = 1;
	string Id = 2;
}

message RegisterRequest{
	string UserName = 1;
	string Password = 2;
}

message RegisterResponse{
	string AccessToken = 1;
	string Id = 2;
}